# lox-experiments

./: .gitignore  README.md  go.mod  main.go
ast/: astPrinter.go  expr.go  exprImpl.go  stmt.go
clox/: chunk.c  chunk.h  common.h  debug.c  debug.h  main.c  memory.c  memory.h  meson.build  value.c  value.h
env/: env.go
examples/: testWhile.lox
go-lox/: README.md  main.go
go-lox/ast/: astPrinter.go  astPrinter_test.go  stmt.go
go-lox/env/: env.go
go-lox/examples/: testClosure.lox  testFibSpeed.lox  testFor.lox  testFunction.lox  testFunctionReturn.lox  testIf.lox  testRecursion.lox
go-lox/interpreter/: debug.test  functionCall.go  interpreter.go  interpreter_test.go  resolver.go
go-lox/parser/: parser_test.go
interpreter/: functionCall.go  interpreter.go  interpreter_test.go
lexer/: lexer.go
parser/: parser.go  parser_test.go
token/: token.go
